fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@ section p {
 .foot input{
     width: 60%;
     box-sizing: border-box;
-    height: 40px;
+    height: 48px;
     text-align: center;
     padding: 0 10px;
     border: none;
